# aligned-allocator

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
include/ha/aligned_allocator/: allocator.h
test/: allocator_test.cpp
